--- a/docs/src/asciidocs/404.adoc
+++ b/docs/src/asciidocs/404.adoc
@@ -3,9 +3,6 @@
 :page-pageid: 404-error
 :page-description: Page Not Found
 
-== We are sorry! 
-
-We could not find the page you were looking for!
-The URL may be incorrect, or the page may have been moved!
+== Found 0 results for "{{searchstring}}"
 
 Go back to the previous page, or let's take you link:{{navprefix}}=introduction[Home].
